src/test/deca/context/valid/custom/operation-binaires/or-true-false.deca
// Description:
//   Or operation between true and false;
//
// Results:
//    Line 10: res equals true.
// History:
//    created on 01/01/2022

{
   boolean res = true || false;
}
