src/test/deca/context/invalid/custom/minus_bool.deca
// Description:
//    Unary operation Minus on a boolean.
//
// Results:
//    Line 11: error, incompatible operation.
// History:
//    created on 11/01/2022

{
    boolean b = false;
    boolean ans = - b;
}
